<resources>
    <string name="app_name">Farmers Plaza</string>
    <string name="app_logo">Farm 2D Logo</string>
    <string name="first_name_text">First Name</string>
    <string name="middle_name_text">Middle Name</string>
    <string name="last_name_text">Last Name</string>
    <string name="user_type_text">User Type</string>
    <string-array name="user_type_category">
        <item>Agriculturist</item>
        <item>Farmer</item>
    </string-array>
    <string name="phone_text">Cellphone Number</string>
    <string name="addresss_text">Address</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="register_text">REGISTER</string>
    <string name="username_text">Username</string>
    <string name="email_username_text">Email / Username</string>
    <string name="login_text">LOGIN</string>
    <string name="signUpText">SIGN UP</string>
    <string name="forgot_pass_text">Forgot Password?</string>
    <string name="profile_text">Profile</string>

    <string name="logout_text">LOG OUT</string>

    <string-array name="user_type">
        <item>Farmer</item>
        <item>Agriculturist</item>
    </string-array>
    <string name="logging_in_text">Logging In...</string>
    <string name="signing_up">Signing Up...</string>
    <string name="invalid_user_text">Invalid Username / Password</string>
    <string name="register_toolbar_title">Register</string>
    <string name="profile_toolbar_title">Profile</string>
    <string name="browse_farm_toolbar_title">Browse Farm</string>
    <string name="browse_crops_toolbar_title">Browse Crops</string>
    <string name="soil_testing_toolbar_title">Soil Testing</string>
    <string name="income_toolbar_title">Income</string>
    <string name="add_farm_toolbar_title">Add Farm</string>
    <string name="change_image_button">Change Image</string>
    <string-array name="image_dialog_options">
        <item>Take a Photo</item>
        <item>Choose from your Gallery</item>
        <item>Cancel</item>
    </string-array>
    <string name="profile_picture_dialog_text">Change Profile Picture via...</string>
    <string name="actual_income_hint">Actual Income</string>
    <string name="check_result_text">Check</string>
    <string name="title_activity_farm_location">Map</string>
</resources>
