<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">
    <!-- Toolbar -->
    <include layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context=".controllers.general.RegistrationActivity">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/register_text"
                android:id="@+id/textView"
                android:textColor="#30542c"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:id="@+id/edit_text_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_text"
                android:inputType="textCapWords"/>

            <EditText
                android:id="@+id/edit_text_fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name_text"
                android:inputType="textCapWords"/>

            <EditText
                android:id="@+id/edit_text_mname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/middle_name_text"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/edit_text_lname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name_text"
                android:inputType="textCapWords" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:hint="@string/user_type_text"/>

                <Spinner
                    android:id="@+id/spinner_user_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/user_type">

                </Spinner>
            </LinearLayout>

            <EditText
                android:id="@+id/edit_text_phone_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_text"
                android:inputType="phone" />

            <EditText
                android:id="@+id/edit_text_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/addresss_text"
                android:inputType="textPostalAddress" />

            <EditText
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_text"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_text"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/edit_text_confirm_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password_text"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/register_text"
                android:textSize="18dp"
                android:textColor="#ffffff" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
