<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context=".controllers.general.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.58"
        android:contentDescription="@string/app_logo"
        android:longClickable="false"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/edit_text_email_username"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="10dp"
        android:editable="false"
        android:hint="@string/email_username_text"
        android:inputType="textEmailAddress|text"
        android:textColor="#ffffff" />

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="10dp"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        android:textAllCaps="false"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/btn_forgot_pass"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:background="?android:attr/selectableItemBackground"
        android:hint="@string/forgot_pass_text" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="10dp"
        android:background="#6ab160"
        android:text="@string/login_text"
        android:textColor="#ffffff"
        android:textColorHighlight="#ffffff"
        android:textSize="18sp"
        android:typeface="normal" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="20dp"
        android:background="#60689d"
        android:elegantTextHeight="false"
        android:text="@string/signUpText"
        android:textColor="#ffffff"
        android:textSize="18sp" />

</LinearLayout>

